@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.8
 
+	- Improved Mac OS X subwindow handling (STR #1402)
 	- Fixed more inconsistencies between fl_draw
 	  and fl_measure (STR #1408)
 	- Fixed fl_measure which mistook a trailing '@@'
